# poseTranslatorCyberRig

./: .gitignore  PROMPT_REWRITE.md  README.md  check_beamng_and_test.py  config.json  conftest.py  deep_workflow_tests.py  generate_final_report.py  kinematics_validator.py  latency_profiler.py  launch.bat  mock_beamng_integration_test.py  mock_beamng_telemetry.py  phantom_pose_generator.py  pid_test_suite.py  protocol_fuzzer.py  pyproject.toml  requirements.txt  run_full_workflow.bat  run_full_workflow.ps1  test_cloud_suite.py  test_custom_stress_suite.py  test_suite.py  translator.py  udp_phantom_pose_transmitter.py  xiao_sabertooth.ino  xiao_serial_responder.py
app/: config_io.py  flypt_io.py  geometry_checks.py  math_core.py  models.py  plots.py  serial_output.py
examples/: example_config.json
test_data/: kinematics_reference.json  pose_sequence_acceleration.json  pose_sequence_braking_on_turn.json  pose_sequence_bumpy_road.json  pose_sequence_extreme_combined.json  pose_sequence_hard_cornering.json  pose_sequence_lane_change_left.json  pose_sequence_lane_change_right.json  pose_sequence_rapid_oscillation.json  simple_unreachable.json
test_reports/: FINAL_VALIDATION_REPORT.md  beamng_integration_report.json  cloud_suite_report.html  cloud_suite_results.json  custom_stress_ideas.json  custom_stress_results.json  fuzz_serial.json  fuzz_udp.json  latency_profile.json  latency_profile_perf.json  mock_beamng_report.json  pid_suite_results.json  report.html  test_details.json  test_results_summary.json  validation_results.json  visualization_report.json  xiao_log.json
(+8 files in other folders)
